[gd_scene load_steps=3 format=2]

[ext_resource path="res://Voxelorama.gd" type="Script" id=1]
[ext_resource path="res://VoxeloramaPreview.tscn" type="PackedScene" id=2]

[node name="Voxelorama" type="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -472.0
margin_bottom = -184.0
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -268.0
margin_top = 8.0
margin_right = 268.0
margin_bottom = 380.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer"]
margin_right = 536.0
margin_bottom = 344.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="VBoxContainer/ViewportContainer"]
size = Vector2( 536, 344 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 0

[node name="VoxeloramaPreview" parent="VBoxContainer/ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="TransparentMaterials" type="CheckBox" parent="VBoxContainer"]
margin_top = 348.0
margin_right = 166.0
margin_bottom = 372.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
text = "Transparent Materials"

[connection signal="about_to_show" from="." to="." method="_on_Voxelorama_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_VoxeloramaDialog_confirmed"]
[connection signal="popup_hide" from="." to="." method="_on_Voxelorama_popup_hide"]
[connection signal="toggled" from="VBoxContainer/TransparentMaterials" to="." method="_on_TransparentMaterials_toggled"]
